--- a/src/app/styles/global.css
+++ b/src/app/styles/global.css
@@ -65,3 +65,15 @@ body {
   top: var(--header-height) !important;
   height: calc(100vh - var(--header-height)) !important;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
