--- a/src/features/search/search.css
+++ b/src/features/search/search.css
@@ -395,7 +395,7 @@
 .poster-picker-badge {
   position: absolute;
   top: 10px;
-  left: 10px;
+  right: 10px;
   width: 28px;
   height: 28px;
   border-radius: 50%;
